@@ -116,3 +116,19 @@ debug = 0
 
 # time to wait to reload config (0 means no reload, it's default value)
 # conf-reload-interval = 0
+
+# Since 2.4, you can include all .cfg files from a folder or any given file
+# For example:
+#   1. file "conf.d/tag.cfg" contains "tag = 'entity123'"
+#      using "include 'conf.d' will set tag to 'entity123'
+#   2. file "/etc/production/glpi-tag" contains "tag = 'entity123'"
+#      using "include '/etc/production/glpi-tag' will set tag to 'entity123'
+# Remark:
+#   1. Prefer to use full path to avoid confusion
+#   2. A parameter set in included file can be over-rided if set again after the directive
+#   3. *.cfg files are read in order in folder, it's better to prefix them with a number
+#   4. Package maintainers are encouraged to use this feature to avoid conflict
+#      during upgrades after configuration update
+#
+#include "conf.d/"
+#include "agent.local"
