@@ -1,0 +1,10 @@
+
+tag=loop
+
+timeout = 77
+
+include "conf.d/../loop.d"
+
+include = loop.d
+include loop.d
+include ../config/loop.d///
